fix branding-block site title size, add styles for 3 level menu, add spacing to forms

--- a/web/themes/cesem/src/docs-layout.css
+++ b/web/themes/cesem/src/docs-layout.css
@@ -11,7 +11,15 @@
     }
 
     & :is(header, main, footer) {
-        padding: clamp(2.5vmin, 5vmin, 5vmin) clamp(5vmin, 5vmin, 15vmin);
+        padding-inline: clamp(5vmin, 5vmin, 15vmin);
+    }
+
+    & header {
+        padding-block: 5vmin;
+    }
+
+    & main, & footer {
+        padding-block: 10vmin;
     }
 
     & footer {
